src/ui/snapshots/cornercase__ui__changes__tests__Project_140.snap
---
source: src/ui/changes.rs
expression: terminal.backend()
---
"                                                                                                       shop › issue…   Every project  ⌕  ×  "
"                                                                                                       Uncommitted   Commits   All          "
"                                                                                                      3 files  +7 −3  ▃▃▃▃▃▃▃▃       ● live "
"                                                                                                                                            "
"                                                                                                      ▌▾ M src/returns.rs          +5 −2    "
"                                                                                                      ┄┄ impl Address ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ "
"                                                                                                        9   9   /// The first line, when t… "
"                                                                                                       10     ▎ pub fn street(parts: &[Str… "
"                                                                                                       11     ▎     parts.first().unwrap()  "
"                                                                                                           10 ▎ pub fn street(parts: &[Str… "
"                                                                                                           11 ▎     parts.first().map(Stri… "
"                                                                                                       12  12   }                           "
"                                                                                                              ↕ 31 unchanged lines          "
"                                                                                                      ┄┄ mod tests ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ "
"                                                                                                       44  44       }                       "
"                                                                                                           45 ▎                             "
"                                                                                                           46 ▎     #[test]                 "
"                                                                                                           47 ▎     fn empty_address_is_re… "
"                                                                                                       45  48   }                           "
"                                                                                                                                            "
"                                                                                                       ▸ M Cargo.lock     lockfile +1 −1    "
"                                                                                                       ▸ A tests/returns.rs       new +1    "
"                                                                                                      ───────────────────────────────────── "
"                                                                                                       fold all               0 of 3 viewed "
