src/ui/snapshots/cornercase__ui__changes__tests__shows_an_error.snap
---
source: src/ui/changes.rs
assertion_line: 917
expression: "render(&view, None).backend()"
---
"  Uncommitted   Commits   All                         ⌕  ×  "
" cannot compare with nope                                   "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
" ────────────────────────────────────────────────────────── "
"                                                            "
