src/ui/snapshots/cornercase__ui__changes__tests__the_empty_every_project_view_says_where_it_looked.snap
---
source: src/ui/changes.rs
expression: "render(&view, None).backend()"
---
"  shop › issue-482   Every project                    ⌕  ×  "
"  uncommitted                                               "
" 0 files                                             ● live "
"                                                            "
" no changes in any project                                  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
" ────────────────────────────────────────────────────────── "
"                                                            "
